# patrol_subnet

./: .gitignore  README.md  build-validator.sh  build.sh  docker-compose.yml  env.local  main.py  pyproject.toml  rds_iam_boot.py  validator.dockerfile  validator_aws_iam.dockerfile
.github/workflows/: validator-build.yml  validator-release.yml
common/: pyproject.toml
common/src/patrol_common/: __init__.py  protocol.py
dev/: static_miner_endpoint.py
docs/: coldkey_search.md  hotkey_ownership.md  incentive.md  miners.md  mining.md  stake_prediction.md  validating.md  validators.md
integration_tests/: alpha_sell_test.py  hotkey_ownership_test.py
local_dev/: local_development.md  query_miner_endpoint.py  query_miner_endpoint_coldkey_search.py  query_miner_endpoint_hotkey_ownership.py
miner/: pyproject.toml
miner.bak/: pyproject.toml
miner/local_dev/: example_subgraph_output.json  local_development.md  query_miner_endpoint_coldkey_search.py  query_miner_endpoint_hotkey_ownership.py
miner/local_dev/utility/: find_high_level_groupings.py  find_low_level_groupings.py  runtime_versions.json
miner/src/patrol_mining/: __init__.py  alpha_sell_predictor.py  hotkey_owner_finder.py  miner.py  subgraph_generator.py
miner/src/patrol_mining/chain_data/: coldkey_finder.py  custom_async_substrate_interface.py  event_fetcher.py  event_processor.py  runtime_groupings.py  runtime_versions.json  substrate_client.py
miner/tests/: alpha_sell_task_test.py
neurons/: miner.py  validator.py
src/: logging.ini
src/patrol/: __init__.py  (+3 more)
validator/: Dockerfile  build.sh  docker-compose-external-postgres.yml  docker-compose-local-postgres.yml  docker-compose-local.yml  docker-compose-sqlite.yml  docker-compose.yml  pyproject.toml  run_docker_local.sh  run_local.sh
validator/integration_tests/: alpha_sell_test.py  hotkey_ownership_test.py
validator/src/patrol/: __init__.py
validator/src/patrol/validation/: __init__.py  auto_update.py  aws_rds.py  config.py  dashboard.py  error.py  miner_scoring.py  scoring.py  validator.py  weight_setter.py
validator/src/patrol/validation/chain/: chain_reader.py
validator/src/patrol/validation/hotkey_ownership/: hotkey_ownership_batch.py  hotkey_ownership_challenge.py  hotkey_ownership_miner_client.py  hotkey_target_generation.py
validator/src/patrol/validation/http_/: HttpDashboardClient.py  security.py
validator/src/patrol/validation/persistence/: __init__.py  alpha_sell_challenge_repository.py  alpha_sell_event_repository.py  miner_score_repository.py  miner_score_respository.py  transaction_helper.py
validator/src/patrol/validation/persistence/migrations/: env.py
validator/src/patrol/validation/persistence/migrations/versions/: 022808d9007f_add_error_fields_to_alpha_sell_task.py  1bd98dce73f4_add_block_number_index_to_event_store.py  1fb381e9157f_add_accuracy_column_to_miner_score.py  50d1fdcf0d19_add_is_scored_to_alpha_sell_task.py  616f4febd39c_create_alpha_sell_event_table.py  b7d66bdfa9c2_add_alpha_sell_prediction_index.py  d544c99ec19c_create_alpha_sell_challenge_table.py  d5a2a40dd73f_create_scoring_batch_sequence.py  d60e7dc289b1_add_stake_scores_to_miner_score.py  e0fa93e1d673_index_alpha_sell_table.py
validator/src/patrol/validation/predict_alpha_sell/: __init__.py  alpha_sell_miner_challenge.py  alpha_sell_miner_client.py  alpha_sell_scoring.py  patrol_api_client.py  stake_event_collector.py
validator/tests/validation/: chain_reader_test.py  dashboard_test.py  miner_score_repository_test.py  security_test.py  test_event_store_repository.py  test_hotkey_target_generation.py  test_miner_scoring.py  weights_test.py
validator/tests/validation/hotkey_ownership/: hotkey_ownership_challenge_test.py  hotkey_ownership_miner_client_test.py  hotkey_ownership_validator_test.py
validator/tests/validation/predict_alpha_sell/: alpha_sell_challenge_repository_test.py  alpha_sell_challenge_test.py  alpha_sell_event_repository_test.py  alpha_sell_miner_client_test.py  alpha_sell_scoring_test.py  alpha_sell_synapse_validation_test.py  alpha_sell_validation_test.py  stake_event_collector_test.py
validator_docker/: docker-compose-external-postgres.yml  docker-compose-local-postgres.yml  docker-compose-sqlite.yml
(+152 files in other folders)
